Connection viewer: make sure the size is big enough on mobiles

--- a/src/components/ConnectionViewer/connection-viewer.module.scss
+++ b/src/components/ConnectionViewer/connection-viewer.module.scss
@@ -1,5 +1,7 @@
 .fixedAspectRatio {
   aspect-ratio: 16 / 9;
+  min-height: 320px;
+  max-width: 100%;
 }
 
 .containerInner {
